anpassa html-kod och skapa css till update_menu

--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -39,7 +39,7 @@
 
         <!-- main start -->
         <main>
-            <div>
+            <div class="admin-nav">
                 <nav>
                     <ul>
                         <li><a href="staffsite.html">Tillbaka</a></li>
@@ -72,7 +72,7 @@
 
                     </div>
 
-                    <div class="admi-menu" id="gelato-list">
+                    <div class="admin-menu" id="gelato-list">
 
                         <h3>Chokladdrömmar</h3>
                         <p>Choklad och hasselnöt</p>
@@ -86,6 +86,7 @@
 
                 <!-- Topping -->
                 <section>
+                    <h2>Topping</h2>
                     <button>Lägg till topping <i class="fa-solid fa-plus"></i> </button>
 
                     <div class="add-topping-form">
@@ -115,6 +116,7 @@
 
                 <!-- Dryck -->
                 <section>
+                    <h2>Dryck</h2>
                     <button>Lägg till Dryck <i class="fa-solid fa-plus"></i> </button>
 
                     <div class="add-drink-form">
