ta bort tillfälligt innehåll

--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -72,15 +72,7 @@
 
                     </div>
 
-                    <div class="admin-menu" id="gelato-list">
-
-                        <h3>Chokladdrömmar</h3>
-                        <p>Choklad och hasselnöt</p>
-                        <p>innehåller nötter</p>
-                        <p>50 kr</p>
-                        <button>Ta bort</button>
-                        <button>Uppdatera</button>
-                    </div>
+                    <div class="admin-menu" id="gelato-list"></div>
 
                 </section>
 
@@ -101,16 +93,7 @@
 
                     </div>
 
-                    <div class="admin-menu" id="topping-list">
-
-                        <h3>Chokladdrömmar</h3>
-                        <p>Choklad och hasselnöt</p>
-                        <p>innehåller nötter</p>
-                        <p>50 kr</p>
-
-                        <button>Ta bort</button>
-                        <button>Uppdatera</button>
-                    </div>
+                    <div class="admin-menu" id="topping-list"></div>
 
                 </section>
 
@@ -130,16 +113,7 @@
 
                     </div>
 
-                    <div class="admin-menu" id="drink-list">
-
-                        <h3>Chokladdrömmar</h3>
-                        <p>Choklad och hasselnöt</p>
-                        <p>innehåller nötter</p>
-                        <p>50 kr</p>
-
-                        <button>Ta bort</button>
-                        <button>Uppdatera</button>
-                    </div>
+                    <div class="admin-menu" id="drink-list"></div>
 
                 </section>
             </div>
