addera html-kod för huvudinnehåll och css

--- a/src/update_com.html
+++ b/src/update_com.html
@@ -37,6 +37,29 @@
         </header>
         <!--  header end  -->
 
+        <!-- main start -->
+        <main>
+            <div class="admin-nav">
+                <nav>
+                    <ul>
+                        <li><a href="staffsite.html">Tillbaka</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="update-container">
+                <h1> Hantera kommentarer </h1>
+                <h2>Kommentarer</h2>
+
+                <div class="admin-comment-list">
+
+                    <div class="admin-comment" id="admin-comment-list"></div>
+
+                </div>
+
+            </div>
+        </main>
+        <!-- main end -->
+
         <!--  footer start  -->
         <footer>
             <nav class="footer-nav">
@@ -61,73 +84,6 @@
 
         </footer>
         <!--  footer end  -->
-</body>
-
-</html>
-</title>
-</head>
-
-<body>
-
-    <!--  header start  -->
-    <header>
-        <nav>
-            <ul>
-                <li><a class="current" href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="index.html"><img src="images/logo.png" alt="Logga Gelato Spot"></a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!--  header end  -->
-
-    <!-- main start -->
-    <main>
-
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="staffsite.html">Tillbaka</a></li>
-                </ul>
-            </nav>
-        </div>
-
-        <h1>Hantera Kommentarer</h1>
-
-        <div class="manage_com" id="comment">
-
-            <button>Ta bort</button>
-        </div>
-
-    </main>
-    <!-- main end -->
-
-    <!--  footer start  -->
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="index.html">Startsida</a></li>
-                <li><a href="menu.html">Meny</a></li>
-                <li><a href="about.html">Om Oss</a></li>
-                <li><a href="about.html">Kontakt</a></li>
-            </ul>
-        </nav>
-
-        <section>
-            <h3>Följ oss på våra sociala kanaler:</h3>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-snapchat"></i>
-        </section>
-
-        <div>
-            <a href="login.html">Personalingång</a>
-        </div>
-
-    </footer>
-    <!--  footer end  -->
     </div>
 </body>
 
