--- a/src/index.html
+++ b/src/index.html
@@ -89,8 +89,7 @@
                     </form>
 
 
-                    <div id="comment-list" class="comment-list">
-                    </div>
+                    <div id="comment-list" class="comment-list"></div>
                 </div>
     </div>
     </section>
