--- a/src/index.html
+++ b/src/index.html
@@ -71,24 +71,24 @@
 
                     <form class="comment-form" method="post">
                         <label for="name">Namn:</label> <br>
-                        <div id="nameInputErr"></div>
+                        <div class="errorMessage" id="nameInputErr"></div>
                         <input type="text" name="name" id="name"><br>
 
                         <label for="rating">Betyg:</label> <br>
-                        <div id="ratingInputErr"></div>
+                        <div class="errorMessage" id="ratingInputErr"></div>
                         <select name="rating" id="rating">
                             <option value="" disabled selected>Välj betyg⭐️</option>
-                            <option value="5">⭐️⭐️⭐️⭐️⭐️</option>
-                            <option value="4">⭐️⭐️⭐️⭐️</option>
-                            <option value="3">⭐️⭐️⭐️</option>
-                            <option value="2">⭐️⭐️</option>
-                            <option value="1">⭐️</option>
+                            <option value="⭐️⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️⭐️</option>
+                            <option value="⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️</option>
+                            <option value="⭐️⭐️⭐️">⭐️⭐️⭐️</option>
+                            <option value="⭐️⭐️">⭐️⭐️</option>
+                            <option value="⭐️">⭐️</option>
                         </select><br>
 
                         <label for="recension">Recension:</label><br>
                         <textarea name="recension" id="recension" rows="5"></textarea><br>
 
-                        <button type="submit">Skicka</button>
+                        <button id="postCommentBtn" type="submit">Skicka</button>
                     </form>
 
 
