hämta topping med get-anrop

--- a/src/menu.html
+++ b/src/menu.html
@@ -49,7 +49,7 @@
                             <h2>Gelato</h2>
                         </div>
 
-                        <div id="menu_topping">
+                        <div id="menu-topping">
                             <h2>Toppings</h2>
                         </div>
 
