löst gridlayout på admin-comment-list

--- a/src/update_com.html
+++ b/src/update_com.html
@@ -50,11 +50,7 @@
                 <h1> Hantera kommentarer </h1>
                 <h2>Kommentarer</h2>
 
-                <div class="admin-comment-list">
-
-                    <div class="admin-comment" id="admin-comment-list"></div>
-
-                </div>
+                    <div class="admin-comment-list" id="admin-comment-list"></div>
 
             </div>
         </main>
