skriv ut toppings till admin-sida

--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -72,7 +72,7 @@
 
                     </div>
 
-                    <div class="admin-menu" id="gelato-list"></div>
+                    <div class="admin-menu" id="admin-gelato-list"></div>
 
                 </section>
 
@@ -93,7 +93,7 @@
 
                     </div>
 
-                    <div class="admin-menu" id="topping-list"></div>
+                    <div class="admin-menu" id="admin-topping-list"></div>
 
                 </section>
 
