Läs ut drink till admin sida och lägg på grid layout

--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -52,99 +52,103 @@
                 <h1>Uppdatera meny</h1>
 
                 <!-- Gelato -->
-                <section>
-                    <h2>Gelato</h2>
-                    <button class="toggle-btn">Lägg till Gelato <i class="fa-solid fa-plus"></i> </button>
+                <div class="list-layout">
+                    <section>
+                        <h2>Gelato</h2>
+                        <button class="toggle-btn">Lägg till Gelato <i class="fa-solid fa-plus"></i> </button>
 
-                    <div class="add-form">
+                        <div class="add-form">
 
-                        <form method="post">
-                            <label for="gelato_name">Namn:</label><br>
-                            <input type="text" name="gelato_name" id="gelato_name"><br>
-                            <label for="flavour">Smak:</label><br>
-                            <input type="text" name="flavour" id="flavour"><br>
-                            <label for="allergens">Allergener:</label><br>
-                            <input type="text" name="allergens" id="allergens"><br>
-                            <label for="gelato_price">Pris:</label><br>
-                            <input type="text" name="gelato_price" id="gelato_price"><br>
-                            <button class="add-btn" type="submit">Lägg till</button>
-                        </form>
+                            <form method="post">
+                                <label for="gelato_name">Namn:</label><br>
+                                <input type="text" name="gelato_name" id="gelato_name"><br>
+                                <label for="flavour">Smak:</label><br>
+                                <input type="text" name="flavour" id="flavour"><br>
+                                <label for="allergens">Allergener:</label><br>
+                                <input type="text" name="allergens" id="allergens"><br>
+                                <label for="gelato_price">Pris:</label><br>
+                                <input type="text" name="gelato_price" id="gelato_price"><br>
+                                <button class="add-btn" type="submit">Lägg till</button>
+                            </form>
 
-                    </div>
+                        </div>
 
-                    <div class="admin-menu" id="admin-gelato-list"></div>
+                        <div class="admin-menu" id="admin-gelato-list"></div>
 
-                </section>
+                    </section>
 
-                <!-- Topping -->
-                <section>
-                    <h2>Topping</h2>
-                    <button class="toggle-btn">Lägg till topping <i class="fa-solid fa-plus"></i> </button>
+                    <!-- Topping -->
+                    <section>
+                        <h2>Topping</h2>
+                        <button class="toggle-btn">Lägg till topping <i class="fa-solid fa-plus"></i> </button>
 
-                    <div class="add-form">
+                        <div class="add-form">
 
-                        <form method="post">
-                            <label for="topping_name">Namn:</label><br>
-                            <input type="text" name="topping_name" id="topping_name"><br>
-                            <label for="topping_price">Pris:</label><br>
-                            <input type="text" name="topping_price" id="topping_price"><br>
-                            <button class="add-btn" type="submit">Lägg till</button>
-                        </form>
+                            <form method="post">
+                                <label for="topping_name">Namn:</label><br>
+                                <input type="text" name="topping_name" id="topping_name"><br>
+                                <label for="topping_price">Pris:</label><br>
+                                <input type="text" name="topping_price" id="topping_price"><br>
+                                <button class="add-btn" type="submit">Lägg till</button>
+                            </form>
 
-                    </div>
+                        </div>
 
-                    <div class="admin-menu" id="admin-topping-list"></div>
+                        <div class="admin-menu" id="admin-topping-list"></div>
 
-                </section>
+                    </section>
 
-                <!-- Dryck -->
-                <section>
-                    <h2>Dryck</h2>
-                    <button class="toggle-btn">Lägg till Dryck <i class="fa-solid fa-plus"></i> </button>
+                    <!-- Dryck -->
+                    <section>
+                        <h2>Dryck</h2>
+                        <button class="toggle-btn">Lägg till Dryck <i class="fa-solid fa-plus"></i> </button>
 
-                    <div class="add-form">
+                        <div class="add-form">
 
-                        <form method="post">
-                            <label for="drink_name">Namn:</label><br>
-                            <input type="text" name="drink_name" id="drink_name"><br>
-                            <label for="drink_price">Pris:</label><br>
-                            <input type="text" name="drink_price" id="drink_price"><br>
-                            <button class="add-btn" type="submit">Lägg till</button>
+                            <form method="post">
+                                <label for="drink_name">Namn:</label><br>
+                                <input type="text" name="drink_name" id="drink_name"><br>
+                                <label for="drink_price">Pris:</label><br>
+                                <input type="text" name="drink_price" id="drink_price"><br>
+                                <button class="add-btn" type="submit">Lägg till</button>
 
-                        </form>
-                    </div>
+                            </form>
 
-                    <div class="admin-menu" id="drink-list"></div>
+                        </div>
+
+                        <div class="admin-menu" id="admin-drink-list"></div>
+                </div>
 
                 </section>
             </div>
-        </main>
-        <!-- main end -->
+    </div>
+    </main>
+    <!-- main end -->
 
-        <!--  footer start  -->
-        <footer>
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="index.html">startsida</a></li>
-                    <li><a href="menu.html">meny</a></li>
-                    <li><a href="about.html">om oss</a></li>
-                    <li><a href="about.html">kontakt</a></li>
-                </ul>
-            </nav>
+    <!--  footer start  -->
+    <footer>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">startsida</a></li>
+                <li><a href="menu.html">meny</a></li>
+                <li><a href="about.html">om oss</a></li>
+                <li><a href="about.html">kontakt</a></li>
+            </ul>
+        </nav>
 
-            <section>
-                <h3>Följ oss på våra sociala kanaler:</h3>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-square-facebook"></i>
-                <i class="fa-brands fa-square-snapchat"></i>
-            </section>
+        <section>
+            <h3>Följ oss på våra sociala kanaler:</h3>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-snapchat"></i>
+        </section>
 
-            <div>
-                <a class="admin-link" href="login.html">Personalingång</a>
-            </div>
+        <div>
+            <a class="admin-link" href="login.html">Personalingång</a>
+        </div>
 
-        </footer>
-        <!--  footer end  -->
+    </footer>
+    <!--  footer end  -->
     </div>
 </body>
 
