lägg till media querys för startsida

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="Sv">
 
 <head>
@@ -33,7 +33,18 @@
                         <li><a href="about.html">Kontakt</a></li>
                     </ul>
                 </nav>
+
+                <nav class="small-screen-nav">
+                    <ul>
+                        <li><a href="index.html">startsida</a></li>
+                        <li><a href="menu.html">meny</a></li>
+                        <li><a href="about.html">om oss</a></li>
+                        <li><a href="about.html">kontakt</a></li>
+                    </ul>
+                </nav>
+
             </div>
+
         </header>
         <!--  header end  -->
 
@@ -45,9 +56,6 @@
             </div>
 
             <section class="about-product">
-                <div>
-                    <img src="images/gelato_cone.png" alt="glass i strut">
-                </div>
 
                 <div class="about-product-ul">
                     <h2>Varför vår gelato är bäst:</h2>
@@ -60,6 +68,11 @@
                         <li>Smakkombinationerna är unika och lyxiga</li>
                     </ul>
                 </div>
+
+                                <div>
+                    <img src="images/gelato_cone.png" alt="glass i strut">
+                </div>
+
             </section>
 
             <section class="comment-section">
