--- a/src/update_menu.html
+++ b/src/update_menu.html
@@ -33,6 +33,16 @@
                         <li><a href="about.html">Kontakt</a></li>
                     </ul>
                 </nav>
+
+                <nav class="small-screen-nav">
+                    <ul>
+                        <li><a href="index.html">startsida</a></li>
+                        <li><a href="menu.html">meny</a></li>
+                        <li><a href="about.html">om oss</a></li>
+                        <li><a href="about.html">kontakt</a></li>
+                    </ul>
+                </nav>
+
             </div>
         </header>
         <!--  header end  -->
