medoa queries för meny-sida

--- a/src/menu.html
+++ b/src/menu.html
@@ -49,55 +49,57 @@
 
         <!--  main start  -->
         <main>
-            <section>
+            <section class="menu-section">
 
                 <div class="menu-container">
                     <h1>Meny</h1>
+
+
                     <div class="menu-list">
-
-                        <div id="menu-gelato">
+                        <div>
                             <h2>Gelato</h2>
+                            <div id="menu-gelato"></div>
                         </div>
-
-                        <div id="menu-topping">
+                        <div>
                             <h2>Toppings</h2>
+                            <div id="menu-topping"></div>
                         </div>
-
-                        <div id="menu-drink">
-                            <h2>Dryck</h2>
-                        </div>
+                        <div>
+                        <h2>Dryck</h2>
+                        <div id="menu-drink"></div>
                     </div>
-
                 </div>
-            </section>
 
-        </main>
-        <!--  main end  -->
+    </div>
+    </section>
 
-        <!--  footer start  -->
-        <footer>
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="index.html">startsida</a></li>
-                    <li><a href="menu.html">meny</a></li>
-                    <li><a href="about.html">om oss</a></li>
-                    <li><a href="about.html">kontakt</a></li>
-                </ul>
-            </nav>
+    </main>
+    <!--  main end  -->
 
-            <section>
-                <h3>Följ oss på våra sociala kanaler:</h3>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-square-facebook"></i>
-                <i class="fa-brands fa-square-snapchat"></i>
-            </section>
+    <!--  footer start  -->
+    <footer>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="index.html">startsida</a></li>
+                <li><a href="menu.html">meny</a></li>
+                <li><a href="about.html">om oss</a></li>
+                <li><a href="about.html">kontakt</a></li>
+            </ul>
+        </nav>
 
-            <div>
-                <a class="admin-link" href="login.html">Personalingång</a>
-            </div>
+        <section>
+            <h3>Följ oss på våra sociala kanaler:</h3>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-snapchat"></i>
+        </section>
 
-        </footer>
-        <!--  footer end  -->
+        <div>
+            <a class="admin-link" href="login.html">Personalingång</a>
+        </div>
+
+    </footer>
+    <!--  footer end  -->
     </div>
 </body>
 
