lägg till kontaktsida, återanvänd kod från about.html

--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,7 @@
                 <nav class="nav-right">
                     <ul>
                         <li><a class="current" href="about.html">Om Oss</a></li>
-                        <li><a href="about.html">Kontakt</a></li>
+                        <li><a href="contact.html">Kontakt</a></li>
                     </ul>
                 </nav>
 
