--- a/src/contact.html
+++ b/src/contact.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/3eb7cd521d.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/favicon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Personalingång</title>
+    <title>Kontakt</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                 <nav class="nav-right">
                     <ul>
                         <li><a href="about.html">Om Oss</a></li>
-                        <li><a href="contact.html">Kontakt</a></li>
+                        <li><a class="current" href="contact.html">Kontakt</a></li>
                     </ul>
                 </nav>
 
@@ -47,21 +47,28 @@
         </header>
         <!--  header end  -->
 
-        <!--  main start  -->
-        <main class="login-form">
-            <h1>Logga in</h1>
-            <form method="post">
-                <label for="username">Användarnamn:</label><br>
-                <input type="text" name="username" id="username"><br>
-                <label for="password">Lösenord:</label><br>
-                <input type="text" name="password" id="password"><br>
-                <button type="submit">Logga in</button>
-            </form>
+        <!-- main start -->
+        <main class="about-main">
+            <h1>Kontakt</h1>
+            <div class="about-container">
 
-            <a href="staffsite.html">Länk</a>
+                <article class="contact-article">
+                    <h2>Var finns vi?</h2>
+                    <p>Lilla Nygatan 12, 11128, Stockhholm</p>
+                    <p>Öppet: 10-18 varje dag</p>
+                    <h2>E-postadress:</h2>
+                    <p>gelato_spot@mail.se</p>
+                    <h2>Telefon</h2>
+                    <p>0701235678</p>
+                </article>
 
+                 <div>
+                    <img src="images/gelato_cone.png" alt="Glass i strut">
+                </div>
+
+            </div>
         </main>
-        <!--  main end  -->
+        <!-- main end -->
 
         <!--  footer start  -->
         <footer>
