--- a/src/contact.html
+++ b/src/contact.html
@@ -39,7 +39,7 @@
                         <li><a href="index.html">startsida</a></li>
                         <li><a href="menu.html">meny</a></li>
                         <li><a href="about.html">om oss</a></li>
-                        <li><a href="about.html">kontakt</a></li>
+                        <li><a href="contact.html">kontakt</a></li>
                     </ul>
                 </nav>
 
@@ -77,7 +77,7 @@
                     <li><a href="index.html">startsida</a></li>
                     <li><a href="menu.html">meny</a></li>
                     <li><a href="about.html">om oss</a></li>
-                    <li><a href="about.html">kontakt</a></li>
+                    <li><a href="contact.html">kontakt</a></li>
                 </ul>
             </nav>
 
